--- a/BowlingScore/BowlingScore.csproj
+++ b/BowlingScore/BowlingScore.csproj
@@ -52,8 +52,17 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FileReaders\Interfaces\IFileReader.cs" />
+    <Compile Include="Generic\Result.cs" />
+    <Compile Include="Helpers\FileExtensions.cs" />
+    <Compile Include="Helpers\FileReaderSelector.cs" />
+    <Compile Include="Helpers\MessageBoxHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FileReaders\TxtFileReader.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
