--- a/BowlingScore/BowlingScore.csproj
+++ b/BowlingScore/BowlingScore.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calculator\BowlingScoreCalculator.cs" />
     <Compile Include="FileReaders\FileWrapper.cs" />
     <Compile Include="FileReaders\Interfaces\IFileWrapper.cs" />
     <Compile Include="Form1.cs">
@@ -60,6 +61,7 @@
     <Compile Include="Helpers\FileReaderSelector.cs" />
     <Compile Include="Helpers\MessageBoxHelper.cs" />
     <Compile Include="Helpers\OpenFileDialogFilters.cs" />
+    <Compile Include="Models\BowlingScoreModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileReaders\TxtFileReader.cs" />
@@ -88,5 +90,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
