--- a/BowlingScore/BowlingScore.csproj
+++ b/BowlingScore/BowlingScore.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calculator\BowlingScoreCalculator.cs" />
+    <Compile Include="Controllers\BowlingDataController.cs" />
+    <Compile Include="Controllers\Interfaces\IBowlingDataController.cs" />
     <Compile Include="FileReaders\FileWrapper.cs" />
     <Compile Include="FileReaders\Interfaces\IFileWrapper.cs" />
     <Compile Include="Form1.cs">
